--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  
+  <style>
+    #root {
+      margin: 0;
+      padding: 0;
+    }
+    #root img{
+      width: 100%;
+      height: 100%;
+    }
+    body{
+      padding: 0;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
+  <script src="../dist/boundle.js"></script>
 </body>
-<script src="../dist/boundle.js"></script>
 </html>
