--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    #root {
-      margin: 0;
-      padding: 0;
-    }
-    #root img{
-      width: 100%;
-      height: 100%;
-    }
-    body{
-      padding: 0;
-      margin: 0;
-    }
+  <style
   </style>
 </head>
 <body>
