提交dev-server的代码

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    我是为了演示webpack-dev-server
+  </div>
 </body>
 </html>
